--- a/index.html
+++ b/index.html
@@ -32,5 +32,5 @@
       <canvas id="canvas" width="1000" height="1000"></canvas>
     </div>
   </div>
-  <script src="game.js"></script>
+  <script src="script.js"></script>
 </body>
